Added DTO shit
